--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {}
 .hero-section>.hero-text h1 {
     font-family: 'Montserrat';
     font-size: 7rem;
-    color: #3172ea;
+    color: #fd7019;
     font-weight: 600;
 }
 
@@ -99,6 +99,7 @@ form {
     padding: 2rem;
     border-radius: 1rem;
     background-color: #fff;
+    box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
 }
 
 form h1 {
@@ -168,6 +169,7 @@ form .form-btn button {
     background-color: #0E1524;
     margin: 8rem 0 0 0;
     padding: 2rem 10rem;
+    transition: 0.3s ease-in;
 }
 
 .about  video{
@@ -283,6 +285,7 @@ h3 {
 }
 
 .gallery {
+    margin-bottom: 5rem;
     background-color: #0E1524;
     z-index: 100;
     padding: 2rem;
@@ -338,9 +341,10 @@ h3 {
 }
 
 footer {
-    background-color: #ffffff;
+    margin-top: 5rem;
+    background-color: #0E1524;
     width: 100%;
-    color: #000000;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -358,7 +362,7 @@ footer {
     width: 25%;
     min-width: 15rem;
     text-align: left;
-    color: #000000;
+    color: #ffff;
   }
   .company h1{
     font-family: 'dancing script';
@@ -376,12 +380,12 @@ footer {
     font-family: 'poppins';
     text-decoration: none;
     display: block;
-    color: #000000;
+    color: #fff;
     padding: 3px 0;
   }
   
   .foot ul h3 {
-    color: #000000;
+    color: #fff;
     margin-bottom: 0.6rem;
   }
   .map{
@@ -389,6 +393,97 @@ footer {
     width:300;
     height:250;
   }
+  .faq {
+    font-family: 'Montserrat';
+    box-shadow: 0 8px 8px -4px lightblue;
+
+  max-width: 700px;
+  margin: auto;
+  padding: 0 15px;
+  text-align: center;
+}
+.faq ul {
+  text-align: left;
+}
+.faq h1 {
+  color: #000;
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+.faq h2 {
+  color: #0f2a57;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  text-align: left;
+  padding: 15px 15px 0;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0;
+
+}
+.faq p {
+  color: #333;
+  text-align: left;
+  font-size: 1rem;
+  max-height: 10rem;
+  contain: layout;
+  display: inline-block;
+  opacity: 1;
+  transform: translate(0, 0);
+  margin-top: 5px;
+  margin-bottom: 15px;
+  padding: 0 50px 0 15px;
+  transition: .3s;
+  z-index: 2;
+}
+.faq ul li {
+  position: relative;
+  overflow: hidden;
+ background: #fff;
+  -webkit-tap-highlight-color: transparent;
+}
+.faq ul li i {
+  position: absolute;
+  transform: translate(-6px, 0);
+  margin-top: 28px;
+  right: 15px;
+}
+.faq ul li i:before, ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: #2d036c;
+  width: 3px;
+  height: 9px;
+}
+.faq ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+.faq ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+.faq ul li input[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  touch-action: manipulation;
+}
+.faq ul li input[type=checkbox]:checked ~ h2 {
+  color: #000;
+}
+.faq ul li input[type=checkbox]:checked ~ p {
+  max-height: 0;
+  transition: .3s;
+  opacity: 0;
+}
+.faq ul li input[type=checkbox]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg);
+}
+.faq ul li input[type=checkbox]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
 @media screen and (max-width: 1150px) {
     .back-video {
         width: auto;
