--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ h3 {
     margin-bottom: 5rem;
     background-color: #0E1524;
     z-index: 100;
-    padding: 2rem;
+    padding: 1rem;
 
 }
 
@@ -378,10 +378,10 @@ footer {
     text-decoration: none;
   }
   
-  .foot ul li a {
+  .foot ul a{
     font-family: 'poppins';
     text-decoration: none;
-    display: block;
+    display: flex;
     color: #fff;
     padding: 3px 0;
   }
@@ -488,6 +488,7 @@ footer {
 }
 @media screen and (max-width: 1150px) {
     .image-grid {
+        padding: 0rem;
 		--num-cols: 2;
 		--row-height: 200px;
 	}
@@ -625,13 +626,15 @@ footer {
         font-size: 4rem;
     }
 form{
+    padding: 0.5rem;
     margin-top: -3rem;
 }
     form h1 {
         font-size: 1.5rem;
     }
-   
-    
+    .about>.content {
+        padding: 1rem;
+    }
     .about{
         align-items: center;
         margin: 4rem 0;
@@ -650,7 +653,9 @@ text-align: center;
     }
     .company {
         text-align: center;
+        width: 100%;
       }
+  
       .foot{
           flex-direction: column;
           align-items: center;
@@ -659,4 +664,10 @@ text-align: center;
           margin-bottom: 5rem;
           gap:2rem;
       }
+      .foot ul a{
+   display: inline;
+  padding: 0.8rem;
+       
+      }
+      
 }
